# conan-vs-vcpkg

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
src/: md5.cpp
